--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -29,3 +29,5 @@ thiserror = "1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 hostname = "0.4"
+uuid = { version = "1", features = ["serde", "v4"] }
+chrono = { version = "0.4", features = ["serde"] }
